- Change MySQL and MariaDB encoding
- Add min size on dynamic fields
- Add amounts on contributions types
- Add region field
- Check if new Galette version is available
- Improve member form display
- Add new specific constant to enable debug mode
- Option to disable sociel networks on member form/view
- Factorize permissions on core and dynamic fields
- Manage administrative documents
- Allow plugins to provide tjheir own fonts

1.0.3 -> 1.0.4

- Cannot access tabs definition on some resolutions
- HTML Email preview shows source
- Fix scrolling in emailing preview's modal
- Few fixes on dependency injection usage
- Number of show member automatically set to "all"
- Groups modification not visually added on member form
- Fix redirection when dynamic file does not exists
- Menu horizontal scroll when name is too long
- Should not select a member as its own parent
- Add preferences footer in replacements

1.0.2 -> 1.0.3

- Logo in mail signature is not shown
- Missing HTML editor for dynamic fields information field
- Update and maintainance pages are no longer working
- Do not throw events on mass edition
- Make cache version dependent
- Check preferences website is valid
- Link to asso website from logo
- Rework UI messages

1.0.1 -> 1.0.2

- Public pages access restriction (CVE-2024-24761)
- Remove useless class from templates and fix social networks search dropdown
- Ensure language is changed when login from cron; closes #1769
- Make replacements icon in PDF Model more visible
- Fix possible issue on group creation
- Fix URL redirection

1.0.0 -> 1.0.1

- Title in members list causes an error
- Cannot enter a new social network name
- Pagination and search on members list broken adding contribution
- Contribution start date overload
- Groups "accordion tree" not opened when a name contains a slash
- open_basedir prevents files in /etc to be read
- Some issues with contribution amount set to 0
- Fatal error with PHP 7.4
- Cron user does not have lang defined
