@@ -18,7 +18,8 @@ Changes
 - Option to disable sociel networks on member form/view
 - Factorize permissions on core and dynamic fields
 - Manage administrative documents
-- Allow plugins to provide tjheir own fonts
+- Allow plugins to provide their own fonts
+- Use decimal for all amounts, drop defaults
 
 1.0.3 -> 1.0.4
 
